Fix bug and add seed data
