# pro-manager-service/static/pro-api.swagger.json
@@ -406,8 +406,7 @@
           "200": {
             "description": "A successful response.",
             "schema": {
-              "type": "object",
-              "properties": {}
+              "$ref": "#/definitions/ProviderInfo"
             }
           },
           "default": {
@@ -497,8 +496,7 @@
           "200": {
             "description": "A successful response.",
             "schema": {
-              "type": "object",
-              "properties": {}
+              "$ref": "#/definitions/ProviderInfo"
             }
           },
           "default": {
@@ -556,9 +554,6 @@
           "type": "string"
         },
         "link": {
-          "type": "string"
-        },
-        "providerId": {
           "type": "string"
         }
       },
